# mlapi

./: FaceRecognition.ipynb  README.md  flake.nix  kernels.nix  main.py  numpy_lib.ipynb  pyproject.toml  shell.nix
api/: pyproject.toml
app/: package.json  pnpm-lock.yaml  server.js
bucket/: package-lock.json  package.json  wrangler.toml
bucket/src/: worker.ts
bucket_api/: package-lock.json  package.json  wrangler.toml
bucket_api/src/: worker.ts
client-app/: .env  index.html  package.json  pnpm-lock.yaml  tsconfig.json
client-app/src/: App.tsx  api.ts  styled.d.ts
client-app/src/api/: bucket_api.ts
client-app/src/components/: uploadImage.tsx
data/: AllRegionsForePublic.csv  USA-median-mean-income-by-age.csv  income_distribution_2014-15.csv  nombres.csv
ir_model/: fingerprint.pb  saved_model.pb
ir_model/variables/: variables.data-00000-of-00001  variables.index
