[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["oscisn93 <ocisneros1@csu.fullerton.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.96.0"
pyngrok = "^6.0.0"
nest-asyncio = "^1.5.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
